--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "amqplib": "^0.5.2",
     "aws-sdk": "^2.242.1",
-    "request": "^2.86.0"
+    "mime-types": "^2.1.18",
+    "request": "^2.86.0",
+    "uuid": "^3.2.1"
   }
 }
