add labeler output example; hash urls

--- a/photo-downloader/package.json
+++ b/photo-downloader/package.json
@@ -13,7 +13,6 @@
     "amqplib": "^0.5.2",
     "aws-sdk": "^2.242.1",
     "mime-types": "^2.1.18",
-    "request": "^2.86.0",
-    "uuid": "^3.2.1"
+    "request": "^2.86.0"
   }
 }
